# apple-music-dl

./: .gitignore  pyproject.toml  run.sh
apple_music_dl/: __main__.py  auth.py  downloader.py  token_store.py
apple_music_dl/ui/: app.js  index.html
